cmake_minimum_required(VERSION 3.23)
project(Data_Structures_And_Algorithms)

set(CMAKE_CXX_STANDARD 14)

add_executable(Data_Structures_And_Algorithms
#        data-structures-and-algorithms/sort.cpp
#        data-structures-and-algorithms/judge_pointer.cpp
#        data-structures-and-algorithms/linked_list_question.cpp
#        data-structures-and-algorithms/tree.cpp
#        data-structures-and-algorithms/graph.cpp
#        data-structures-and-algorithms/trietree.cpp
#        data-structures-and-algorithms/greedy_algorithm.cpp
#        data-structures-and-algorithms/dijkstra_heap.cpp
#        data-structures-and-algorithms/hanoi.cpp
        data-structures-and-algorithms/supplement.cpp)
